--- a/style.css
+++ b/style.css
@@ -56,11 +56,8 @@ button{
     font-weight: 400;
     
 }
-.btn4:hover{
-    background-color: hsl(217, 12%, 63%);
-    color: #fff;
-}
-.btn5:hover {
+
+.btn:hover {
     background-color: hsl(25, 97%, 53%);
     color: #fff;
 }
